--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,66 +1,75 @@
 body {
-    font-family: 'Arial', sans-serif;
+  font-family: 'Arial', sans-serif;
+  background-color: rgb(0, 0, 0);
 }
+
 .navbar {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
+
 .fondoDelete {
-    background-color: #ffffff;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
 .table th, .table td {
-    vertical-align: middle;
+  vertical-align: middle;
 }
+
 .btn-outline-info {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
+
 .alert {
-    margin-top: 20px;
+  margin-top: 20px;
 }
+
 h2 {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
+
 .card {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
+
 .container {
-    max-width: 900px;
+  max-width: 900px;
 }
 
 .hero-section {
-    background: url('hero-bg.jpg') no-repeat center center/cover;
-    color: white;
-    text-align: center;
-    padding: 150px 0;
-  }
-  
-  .hero-section h1 {
-    font-size: 3.5em;
-    margin-bottom: 20px;
-  }
-  
-  .hero-section p {
-    font-size: 1.5em;
-  }
-  
-  .services {
-    margin-top: 50px;
-  }
-  
-  .card {
-    margin-bottom: 30px;
-    transition: transform 0.3s;
-  }
-  
-  .card:hover {
-    transform: scale(1.05);
-  }
-  
-  .card-title {
-    font-size: 1.75em;
-  }
-  
-  .card-text {
-    font-size: 1.2em;
-  }
+  background: url('hero-bg.jpg') no-repeat center center/cover;
+  color: rgb(190, 221, 255);
+  text-align: center;
+  padding: 150px 0;
+}
+
+.hero-section h1 {
+  font-size: 3.5em;
+  margin-bottom: 20px;
+}
+
+.hero-section p {
+  font-size: 1.5em;
+}
+
+.services {
+  margin-top: 50px;
+}
+
+.card {
+  margin-bottom: 30px;
+  transition: transform 0.3s;
+}
+
+.card:hover {
+  transform: scale(1.05);
+}
+
+.card-title {
+  font-size: 1.75em;
+}
+
+.card-text {
+  font-size: 1.2em;
+}
